--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation project(path: ':app')
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'com.github.KarasLuo:transfer_sdk:0.0.2'
 }
