--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -5,11 +5,13 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "com.joseph.demo2"
+        applicationId "com.joseph.transfertool"
         minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -23,9 +25,18 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'pub.devrel:easypermissions:3.0.0'
-    implementation 'com.github.KarasLuo:transfer_sdk:0.0.2'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation project(':app')
+    //动态权限申请
+    api "com.github.tbruyelle:rxpermissions:0.10.2"
+    //生命周期
+    implementation 'com.trello.rxlifecycle3:rxlifecycle:3.1.0'
+    implementation 'com.trello.rxlifecycle3:rxlifecycle-android:3.1.0'
+    implementation 'com.trello.rxlifecycle3:rxlifecycle-components:3.1.0'
 }
