--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //implementation 'com.github.KarasLuo:transfer_sdk:latest'
     implementation project(':app')
     //动态权限申请
     api "com.github.tbruyelle:rxpermissions:0.10.2"
